update securityConfig